Refactor driver assignment management: update DTO structure, implement new mapper, and enhance service methods for driver assignment and route handling.